# OpenGLRenderingEngine

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/include/imgui/: imgui_demo.cpp
src/: application.hpp  main.cpp  pch.cpp  pch.hpp  utils.cpp  utils.hpp
src/app/: application.cpp  application.hpp  editor.cpp  editor.hpp  simple_notification_service.cpp  simple_notification_service.hpp  types.hpp  uuid_registry.cpp  uuid_registry.hpp
src/editor/: camera.cpp  editor.cpp  editor.hpp
src/opengl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  open_gl_shader.cpp  open_gl_shader.hpp  opengl_buffer.cpp  opengl_buffer.hpp  opengl_framebuffer.cpp  opengl_framebuffer.hpp  opengl_imgui.cpp  opengl_imgui.hpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_texture2D.cpp  opengl_texture2D.hpp  opengl_utils.cpp  opengl_utils.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp  opengl_vertex_buffer_layout.cpp  opengl_vertex_buffer_layout.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
src/renderer/: bounding_box.hpp  camera.cpp  camera.hpp  instanced_mesh.cpp  instanced_mesh.hpp  material.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  vertex.hpp
src/resource/: loaded_resource.hpp  resource_importer.cpp  resource_importer.hpp  resource_manager.cpp  resource_manager.hpp
src/scene_graph/: mesh_node.cpp  mesh_node.hpp  scene_graph.cpp  scene_graph.hpp  scene_node.cpp  scene_node.hpp
src/window/: event.hpp  input.cpp  input.hpp  window.cpp  window.hpp
